Removed the extra Google Colab loink

--- a/Linear_Regression.ipynb
+++ b/Linear_Regression.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "Linear Regression.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -44,18 +45,6 @@
       },
       "source": [
         "<h1>Linear Regression</h1>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_UG066BVjujt",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/drive/1hmuBM3fncKKVowytHnStdajS9YqvOQmL#scrollTo=2vDQwkyUjSfe\">\n",
-        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
-        "</a>"
       ]
     },
     {
